<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_no_login_tip">需要登录小鹏账号</string>
    <string name="action_settings">Settings</string>
    <string name="add_list">添加列表</string>
    <string name="add_to_list">添加到</string>
    <string name="add_widget">Add widget</string>
    <string name="album_collect_count_max">收藏歌单已达上限</string>
    <string name="album_detail_subrrible_already">已订阅</string>
    <string name="album_detail_subscribe">订阅</string>
    <string name="all_list_name">全部音乐</string>
    <string name="all_singer">全部</string>
    <string name="allradio_title1">全国共</string>
    <string name="allradio_title2">个电台</string>
    <string name="app_bar_layout_collapsed_show">app_bar_layout_collapsed_show</string>
    <string name="app_bar_layout_expanded_show">app_bar_layout_expanded_show</string>
    <string name="app_name">音乐</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="auth_now">授权登录</string>
    <string name="authorize_login_music">授权登录酷狗音乐</string>
    <string name="bind_failed">绑定失败</string>
    <string name="bind_success">绑定成功！</string>
    <string name="bluetooth_mode_unsupport">蓝牙音乐不支持更改播放模式</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bt_connect_bt_tv">连接蓝牙</string>
    <string name="bt_connect_no_sub_title">请重新连接手机蓝牙，并播放音乐</string>
    <string name="bt_connect_no_title">蓝牙音乐已断开</string>
    <string name="bt_continue_all">继续播放</string>
    <string name="bt_dialog_cancel">取消</string>
    <string name="bt_dialog_ok">确定</string>
    <string name="bt_music_playing">蓝牙音乐播放中...</string>
    <string name="bt_no_player_error">手机可能没有打开播放器软件，请检查一下</string>
    <string name="bt_op_fail_hint">执行失败，请尝试重新连接手机蓝牙</string>
    <string name="bt_pause">暂停播放</string>
    <string name="bt_pause_all">暂停播放</string>
    <string name="bt_phone_music_connecting_tips">蓝⽛⾳乐获取中…</string>
    <string name="bt_phone_music_play_tip">请打开手机里的音乐App，并开始播放</string>
    <string name="bt_play_all">播放全部</string>
    <string name="bt_play_breaking_news">播放快讯</string>
    <string name="bt_top_str">蓝牙</string>
    <string name="button_settings">Settings</string>
    <string name="buy_vip">购买QQ音乐会员</string>
    <string name="buy_vip_sub_title">打开手机QQ音乐App,选择我的-会员中心-豪华绿钻即可购买会员。</string>
    <string name="buy_vip_tips1">*购买前请认真核对小鹏汽车与手机QQ音乐是否登录了相同的账号。</string>
    <string name="buy_vip_tips2">*你也可以在QQ音乐PC端或网页端购买豪华绿钻会员。</string>
    <string name="buy_vip_title">如何购买豪华绿钻会员？</string>
    <string name="cancel">取消</string>
    <string name="cannotcollect">当前蓝牙歌曲暂无匹配在线结果，无法收藏</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="china_singer">华语</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="collect_music">收藏歌单</string>
    <string name="collected_music_max_selected">最多选择 %1$d 项</string>
    <string name="common_mediasource_error_hint">歌曲列表暂无资源</string>
    <string name="common_next">下一首</string>
    <string name="common_pause">暂停</string>
    <string name="common_play">播放</string>
    <string name="common_pre">上一首</string>
    <string name="common_tips_loading">正在加载，请稍候…</string>
    <string name="common_tips_loading_failed">加载失败，请稍后重试</string>
    <string name="common_tips_network_error">⽹络不给力，请稍后重试</string>
    <string name="common_tips_no_result">列表为空</string>
    <string name="complete">完成</string>
    <string name="confirm">确认</string>
    <string name="confirm_change_device">切换蓝牙设备</string>
    <string name="confirm_clear_hisotry">您是否要清空搜索历史</string>
    <string name="confirm_ok">结束播放</string>
    <string name="confirm_restore_bt_music">是否退出蓝牙音乐？</string>
    <string name="copy_right">由喜马拉雅提供读物资源</string>
    <string name="copyright_restrict_hint">暂无资源</string>
    <string name="countdown_desc">后自动退出</string>
    <string name="custom_list_size_limit">歌曲数量已达上限</string>
    <string name="daily_title">今日推荐</string>
    <string name="daily_txt">根据你的品味，每天6:00更新</string>
    <string name="default_lrc">小鹏汽车 悦动你心</string>
    <string name="default_music_content">不知道你的单曲循环的歌单里是否也有这一首？我正在小鹏%1$s上听这首歌，让熟悉的歌声伴随你的每一天。“点赞并发送到车”就可以在车上收听啦！</string>
    <string name="default_program_content">天涯很远，有小鹏，一切都很近。我在小鹏%1$s上收听到一本特别有意思的读物，跟大家一起分享。“点赞并发送到车”就可以在车上收听啦！</string>
    <string name="default_time">00:00</string>
    <string name="delete">删除</string>
    <string name="delete_album_fail_template">删除 %1$s 这个歌单失败</string>
    <string name="delete_album_name_template">%1$s 这个歌单</string>
    <string name="delete_list">删除选中</string>
    <string name="delete_music_list_name_template">%1$s 等%2$d首歌曲</string>
    <string name="delete_warning_template">确定删除 %1$s吗？</string>
    <string name="delete_warning_title">删除歌曲</string>
    <string name="desc_collected_music">歌曲数量：%1$d 首</string>
    <string name="desc_dialog_program_login">订阅的读物有内容更新，小P会及时提醒你</string>
    <string name="desc_history_music">展示该设备下最近播放的 %1$d 首歌</string>
    <string name="description_txt">简介:</string>
    <string name="detail_collapse">收起详情</string>
    <string name="detail_expand">展开详情</string>
    <string name="detail_no_desc">暂无简介</string>
    <string name="dialog_config_login">确认登录</string>
    <string name="dialog_login_other">切换到其他小鹏账号授权登录</string>
    <string name="dialog_xp_account_login_title">使用当前小鹏账号登录</string>
    <string name="dsp_classical">古典</string>
    <string name="dsp_close">关闭</string>
    <string name="dsp_custom">自定义</string>
    <string name="dsp_dynamic_scene">动感现场</string>
    <string name="dsp_dynamic_scene_intr">现场声场效果\n仿佛置身于演唱会</string>
    <string name="dsp_high_disco">劲爆重音</string>
    <string name="dsp_high_disco_tip">适合摇滚、DJ\n电音、声音更加浑厚</string>
    <string name="dsp_jazz">爵士</string>
    <string name="dsp_normal">普通音效</string>
    <string name="dsp_normal_intr">流行、爵士、舞曲等5种音效</string>
    <string name="dsp_normal_selector">已选%1$s音效</string>
    <string name="dsp_overall">全景环绕</string>
    <string name="dsp_overall_intr">全景立体声场\n适配各种音乐风格</string>
    <string name="dsp_popular">流行</string>
    <string name="dsp_pure_voice">纯净人声</string>
    <string name="dsp_pure_voice_tip">纯真人声，适合\n语音、读物类声音</string>
    <string name="dsp_rock">摇滚</string>
    <string name="dsp_top_str">音效</string>
    <string name="dsp_voice">人声</string>
    <string name="dudition_title">P7 专属试听</string>
    <string name="empty_no_collected">暂无收藏订阅内容</string>
    <string name="empty_no_history">暂无最近播放内容</string>
    <string name="empty_no_playlist">暂无我的歌单内容</string>
    <string name="empty_no_template">暂无%1$s内容</string>
    <string name="err_tip_no_flow">娱乐流量已用完，无法收听在线内容，请及时购买娱乐流量</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_no_fragment_url">没有传递fragment地址，请检查</string>
    <string name="es_singer">欧美</string>
    <string name="ever_play_this_program">你已收听过本条内容，继续为您播放其他新闻</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="favorite_list_name">我的最爱</string>
    <string name="feel_lucky">换一批</string>
    <string name="female_singer">女歌手</string>
    <string name="first_all">全部|第一行全部</string>
    <string name="follow_sys_account_desc">每当系统小鹏账号切换时，音乐账号都会跟随切换，以满足不同用户能独立使用各自的音乐内容</string>
    <string name="follow_sys_account_title">始终跟随系统账号登录</string>
    <string name="fragmentation_stack_help">*: Not in backStack\n☀: Visible</string>
    <string name="fragmentation_stack_view">Stack</string>
    <string name="goto_login_collect">登录后可同步收藏订阅内容</string>
    <string name="group_singer">组合</string>
    <string name="japan_singer">日本</string>
    <string name="korea_singer">韩国</string>
    <string name="male_singer">男歌手</string>
    <string name="netradio_login_cancle">取消</string>
    <string name="netradio_login_ok">立即登录</string>
    <string name="netradio_login_tip_desc">系统会自动帮你把车机上收藏的电台云同步\n　（暂不支持同步手机端电台收藏内容）</string>
    <string name="netradio_login_tip_title">收藏电台需要先登录喜马拉雅账号</string>
    <string name="no_login_qq">请登录QQ音乐账号</string>
    <string name="no_login_xmly">请登录喜马拉雅账号</string>
    <string name="other_singer">其他</string>
    <string name="playlist_custom_import_text_1">打开手机上的QQ音乐App，选择“我的-更多-导入外部歌单”</string>
    <string name="playlist_custom_import_text_2">在手机上完成外部歌单的导入后，我们会将歌单自动同步到⻋机上</string>
    <string name="title_playlist_custom_import">如何导入外部歌单？</string>
    <string name="title_qq_login">QQ音乐账号</string>
    <string name="title_xmly_login">喜马拉雅账号</string>
    <string name="top_singer">TOP 100</string>
    <string name="user_logout">退出登录</string>
    <string name="vip_buying_tips">购买豪华绿钻会员</string>
    <string name="vip_login_text">点击登录</string>
    <string name="vip_login_text_qq">QQ登录</string>
    <string name="vip_login_text_wx">微信登录</string>
    <string name="vip_xmly_buying_tips">购买喜⻢拉雅会员</string>
    <string name="vui_label_close_dialog">关闭</string>
    <string name="vui_label_group_logout_music">QQ音乐|QQ音乐账号</string>
    <string name="vui_label_group_logout_reading">喜马拉雅|喜马拉雅账号</string>
    <string name="vui_label_logout_music">退出QQ音乐|退出登录</string>
    <string name="vui_label_logout_reading">退出喜马拉雅|退出登录</string>
    <string name="xmly_vip_buying_dialog_tips_1">打开手机喜马拉雅App，选择底部“VIP”入口购买会员</string>
    <string name="xmly_vip_buying_dialog_tips_2">购买前请先确认⼿机和⻋机端登录的账号是否相同</string>
    <string name="xmly_vip_buying_dialog_tips_4">如有疑问，请咨询喜马拉雅客服：</string>
    <string name="xmly_vip_buying_dialog_title">如何购买喜⻢拉雅会员</string>
</resources>