<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center_horizontal" android:id="@+id/root_layout" android:background="@drawable/x_bg_dialog" android:layout_width="744dp" android:layout_height="400dp">
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_title_01_size" android:textColor="@color/x_theme_text_01" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="44dp" android:text="@string/netradio_login_tip_title" android:layout_centerHorizontal="true"/>
    <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_body_01_size" android:textColor="@color/x_theme_text_02" android:id="@+id/tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="70dp" android:text="@string/netradio_login_tip_desc" android:layout_below="@+id/title" android:layout_centerHorizontal="true"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="90dp" android:layout_marginBottom="8dp" android:layout_alignParentBottom="true">
        <com.xiaopeng.xui.widget.XButton android:id="@+id/ok_layout" android:layout_width="356dp" android:layout_height="90dp" android:layout_marginLeft="8dp" android:text="@string/netradio_login_ok" style="@style/XButton.Blue"/>
        <com.xiaopeng.xui.widget.XButton android:id="@+id/cancle_layout" android:layout_width="356dp" android:layout_height="90dp" android:layout_marginLeft="16dp" android:text="@string/netradio_login_cancle" style="@style/XButton.Black"/>
    </LinearLayout>
</com.xiaopeng.xui.widget.XRelativeLayout>
