<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="860dp" android:layout_height="wrap_content">
    <com.xiaopeng.xui.widget.XRelativeLayout android:id="@+id/singer_select_big" android:background="@drawable/bg_singer_top_big" android:clickable="true" android:layout_width="860dp" android:layout_height="139dp" app:vuiEnableViewVuiMode="true">
        <com.xiaopeng.xui.view.XView android:background="@drawable/bg_singer_top_big_slit" android:layout_width="match_parent" android:layout_height="68dp"/>
        <com.xiaopeng.xui.view.XView android:background="@drawable/bg_singer_top_big_slit" android:layout_width="match_parent" android:layout_height="68dp" android:layout_marginTop="71dp"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="22sp" android:textColor="@color/singer_tab_text_selector" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/all" android:background="@drawable/singer_tab_bg" android:layout_width="126dp" android:layout_height="48dp" android:layout_marginLeft="12dp" android:layout_marginTop="10dp" android:text="@string/all_singer" app:vuiElementType="BUTTON" app:vuiEnableViewVuiMode="true"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="22sp" android:textColor="@color/singer_tab_text_selector" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/china" android:background="@drawable/singer_tab_bg" android:layout_width="126dp" android:layout_height="48dp" android:layout_marginLeft="16dp" android:layout_marginTop="10dp" android:text="@string/china_singer" android:layout_toRightOf="@+id/all" app:vuiElementType="BUTTON" app:vuiEnableViewVuiMode="true"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="22sp" android:textColor="@color/singer_tab_text_selector" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/europe_america" android:background="@drawable/singer_tab_bg" android:layout_width="126dp" android:layout_height="48dp" android:layout_marginLeft="16dp" android:layout_marginTop="10dp" android:text="@string/es_singer" android:layout_toRightOf="@+id/china" app:vuiElementType="BUTTON" app:vuiEnableViewVuiMode="true"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="22sp" android:textColor="@color/singer_tab_text_selector" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/korea" android:background="@drawable/singer_tab_bg" android:layout_width="126dp" android:layout_height="48dp" android:layout_marginLeft="16dp" android:layout_marginTop="10dp" android:text="@string/korea_singer" android:layout_toRightOf="@+id/europe_america" app:vuiElementType="BUTTON" app:vuiEnableViewVuiMode="true"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="22sp" android:textColor="@color/singer_tab_text_selector" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/japan" android:background="@drawable/singer_tab_bg" android:layout_width="126dp" android:layout_height="48dp" android:layout_marginLeft="16dp" android:layout_marginTop="10dp" android:text="@string/japan_singer" android:layout_toRightOf="@+id/korea" app:vuiElementType="BUTTON" app:vuiEnableViewVuiMode="true"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="22sp" android:textColor="@color/singer_tab_text_selector" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/other" android:background="@drawable/singer_tab_bg" android:layout_width="126dp" android:layout_height="48dp" android:layout_marginLeft="16dp" android:layout_marginTop="10dp" android:text="@string/other_singer" android:layout_toRightOf="@+id/japan" app:vuiElementType="BUTTON" app:vuiEnableViewVuiMode="true"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="22sp" android:textColor="@color/singer_tab_text_selector" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/top_100" android:background="@drawable/singer_tab_bg" android:layout_width="126dp" android:layout_height="48dp" android:layout_marginLeft="12dp" android:layout_marginTop="81dp" android:text="@string/top_singer" app:vuiElementType="BUTTON" app:vuiEnableViewVuiMode="true" style="?android:attr/borderlessButtonStyle"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="22sp" android:textColor="@color/singer_tab_text_selector" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/male_singer" android:background="@drawable/singer_tab_bg" android:layout_width="126dp" android:layout_height="48dp" android:layout_marginLeft="16dp" android:layout_marginTop="81dp" android:text="@string/male_singer" android:layout_toRightOf="@+id/top_100" app:vuiElementType="BUTTON" app:vuiEnableViewVuiMode="true" style="?android:attr/borderlessButtonStyle"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="22sp" android:textColor="@color/singer_tab_text_selector" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/female_singer" android:background="@drawable/singer_tab_bg" android:layout_width="126dp" android:layout_height="48dp" android:layout_marginLeft="16dp" android:layout_marginTop="81dp" android:text="@string/female_singer" android:layout_toRightOf="@+id/male_singer" app:vuiElementType="BUTTON" app:vuiEnableViewVuiMode="true" style="?android:attr/borderlessButtonStyle"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="22sp" android:textColor="@color/singer_tab_text_selector" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/group_singer" android:background="@drawable/singer_tab_bg" android:layout_width="126dp" android:layout_height="48dp" android:layout_marginLeft="16dp" android:layout_marginTop="81dp" android:text="@string/group_singer" android:layout_toRightOf="@+id/female_singer" app:vuiElementType="BUTTON" app:vuiEnableViewVuiMode="true" style="?android:attr/borderlessButtonStyle"/>
    </com.xiaopeng.xui.widget.XRelativeLayout>
</FrameLayout>
