<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/rl_content" android:tag="layout/fragment_login_manager_0" android:paddingLeft="30dp" android:paddingRight="30dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <com.xiaopeng.musicradio.vip.view.VipSaleBanner android:id="@+id/vipsale_banner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30dp"/>
        <com.xiaopeng.xui.widget.XRelativeLayout android:id="@+id/ll_qq_account" android:background="@drawable/bg_login_account_info" android:layout_width="match_parent" android:layout_height="540dp" app:vuiElementType="GROUP" app:vuiEnableViewVuiMode="true" app:vuiLabel="@string/vui_label_group_logout_music">
            <com.xiaopeng.xui.widget.XImageView android:id="@+id/iv_qq_logo" android:visibility="gone" android:layout_width="36dp" android:layout_height="36dp" android:layout_margin="30dp" android:src="@drawable/img_logo_qq"/>
            <com.xiaopeng.xui.widget.XTextView android:textSize="22sp" android:textColor="@color/x_theme_text_04" android:gravity="center_vertical" android:id="@+id/tv_qq_name" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="36dp" android:layout_marginLeft="76dp" android:layout_marginTop="30dp" android:text="@string/title_qq_login"/>
            <com.xiaopeng.xui.widget.XImageView android:id="@+id/iv_qq_logo_big" android:layout_width="140dp" android:layout_height="140dp" android:layout_marginTop="132dp" android:src="@drawable/ic_big_logo_qq" android:layout_centerHorizontal="true"/>
            <com.xiaopeng.musicradio.widget.MusicCircleImageView android:id="@+id/iv_qq_avatar" android:background="@drawable/bg_avatar_border_7" android:padding="5dp" android:visibility="gone" android:layout_width="160dp" android:layout_height="160dp" android:layout_marginTop="127dp" android:layout_centerHorizontal="true" app:vuiMode="DISABLED" app:xui_display="circle"/>
            <com.xiaopeng.xui.widget.XTextView android:textSize="28dp" android:textColor="@color/x_theme_text_01" android:id="@+id/tv_qq_no_login" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="304dp" android:text="@string/no_login_qq" android:layout_centerHorizontal="true"/>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="304dp" android:layout_centerHorizontal="true">
                <com.xiaopeng.xui.widget.XTextView android:textSize="34sp" android:textColor="@color/x_theme_text_01" android:ellipsize="end" android:gravity="center_vertical" android:id="@+id/tv_qq_nick_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="700dp" android:text="" android:singleLine="true"/>
                <com.xiaopeng.musicradio.widget.AccountImageLayout android:id="@+id/qq_image_layout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="349dp" android:layout_centerHorizontal="true">
                <com.xiaopeng.xui.widget.XTextView android:textSize="22dp" android:textColor="@color/x_theme_text_03" android:id="@+id/tv_qq_vip_tips" android:paddingTop="12dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                <com.xiaopeng.xui.widget.XTextView android:textSize="22dp" android:textColor="@color/color_forward_normal" android:id="@+id/btn_vip_buying" android:paddingLeft="20dp" android:paddingTop="12dp" android:paddingRight="20dp" android:paddingBottom="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vip_buying_tips" app:vuiAction="Click" app:vuiElementType="BUTTON" app:vuiEnableViewVuiMode="true"/>
            </LinearLayout>
            <com.xiaopeng.xui.widget.XButton android:textSize="@dimen/x_font_body_02_size" android:gravity="center" android:id="@+id/btn_logout" android:layout_width="200dp" android:layout_height="56dp" android:layout_margin="20dp" android:text="@string/user_logout" android:layout_alignParentRight="true" app:vuiAction="Click" app:vuiElementType="BUTTON" app:vuiEnableViewVuiMode="true" app:vuiLabel="@string/vui_label_logout_music" style="@style/XButton.Ghost.Large.Positive"/>
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/logout_btn_margin_top_no_desc" android:layout_centerHorizontal="true">
                <com.xiaopeng.xui.widget.XButton android:id="@+id/btn_login_wx" android:visibility="gone" android:layout_width="228dp" android:text="@string/vip_login_text_wx" app:vuiAction="Click" app:vuiElementType="BUTTON" app:vuiEnableViewVuiMode="true" style="@style/XButton.Real.Small.Positive"/>
                <com.xiaopeng.xui.widget.XButton android:id="@+id/btn_login_qq" android:visibility="gone" android:layout_width="228dp" android:layout_marginLeft="42dp" android:text="@string/vip_login_text_qq" app:vuiAction="Click" app:vuiElementType="BUTTON" app:vuiEnableViewVuiMode="true" style="@style/XButton.Real.Small.Positive"/>
            </LinearLayout>
        </com.xiaopeng.xui.widget.XRelativeLayout>
        <com.xiaopeng.xui.widget.XRelativeLayout android:id="@+id/ll_xmly_account" android:background="@drawable/bg_login_account_info" android:layout_width="match_parent" android:layout_height="540dp" android:layout_marginTop="30dp" app:vuiElementType="GROUP" app:vuiEnableViewVuiMode="true" app:vuiLabel="@string/vui_label_group_logout_reading">
            <com.xiaopeng.xui.widget.XImageView android:id="@+id/iv_xmly_logo" android:visibility="gone" android:layout_width="36dp" android:layout_height="36dp" android:layout_margin="30dp" android:src="@drawable/img_logo_ximalaya"/>
            <com.xiaopeng.xui.widget.XTextView android:textSize="22sp" android:textColor="@color/x_theme_text_04" android:gravity="center_vertical" android:id="@+id/tv_xmly_name" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="36dp" android:layout_marginLeft="76dp" android:layout_marginTop="30dp" android:text="@string/title_xmly_login"/>
            <com.xiaopeng.xui.widget.XImageView android:id="@+id/iv_xmly_logo_big" android:layout_width="140dp" android:layout_height="140dp" android:layout_marginTop="132dp" android:src="@drawable/ic_big_logo_ximalaya" android:layout_centerHorizontal="true"/>
            <com.xiaopeng.musicradio.widget.MusicCircleImageView android:id="@+id/iv_xmly_avatar" android:background="@drawable/bg_avatar_border_7" android:padding="5dp" android:visibility="gone" android:layout_width="160dp" android:layout_height="160dp" android:layout_marginTop="127dp" android:layout_centerHorizontal="true" app:vuiMode="DISABLED" app:xui_display="circle"/>
            <com.xiaopeng.xui.widget.XTextView android:textSize="28dp" android:textColor="@color/x_theme_text_01" android:id="@+id/tv_xmly_no_login" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="304dp" android:text="@string/no_login_xmly" android:layout_centerHorizontal="true"/>
            <com.xiaopeng.xui.widget.XTextView android:textSize="34dp" android:textColor="@color/x_theme_text_01" android:gravity="center_vertical" android:id="@+id/tv_xmly_nick_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="304dp" android:drawablePadding="@dimen/dp_16" android:layout_centerHorizontal="true"/>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="349dp" android:layout_centerHorizontal="true">
                <com.xiaopeng.xui.widget.XTextView android:textSize="22dp" android:textColor="@color/x_theme_text_03" android:id="@+id/tv_xmly_vip_tips" android:paddingTop="12dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                <com.xiaopeng.xui.widget.XTextView android:textSize="22dp" android:textColor="@color/color_forward_normal" android:id="@+id/btn_xmly_vip_buying" android:paddingLeft="20dp" android:paddingTop="12dp" android:paddingRight="20dp" android:paddingBottom="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vip_xmly_buying_tips" app:vuiAction="Click" app:vuiElementType="BUTTON" app:vuiEnableViewVuiMode="true"/>
            </LinearLayout>
            <com.xiaopeng.xui.widget.XButton android:textSize="@dimen/x_font_body_02_size" android:gravity="center" android:id="@+id/btn_xmly_logout" android:layout_width="200dp" android:layout_height="56dp" android:layout_margin="20dp" android:text="@string/user_logout" android:layout_alignParentRight="true" app:vuiAction="Click" app:vuiElementType="BUTTON" app:vuiEnableViewVuiMode="true" app:vuiLabel="@string/vui_label_logout_reading" style="@style/XButton.Ghost.Large.Positive"/>
            <com.xiaopeng.xui.widget.XButton android:id="@+id/btn_xmly_login" android:visibility="gone" android:layout_width="308dp" android:layout_marginTop="@dimen/logout_btn_margin_top_no_desc" android:text="@string/vip_login_text" android:layout_centerHorizontal="true" app:vuiAction="Click" app:vuiElementType="BUTTON" app:vuiEnableViewVuiMode="true" style="@style/XButton.Real.Small.Positive"/>
        </com.xiaopeng.xui.widget.XRelativeLayout>
    </LinearLayout>
</com.xiaopeng.xui.widget.XRelativeLayout>
