<?xml version="1.0" encoding="utf-8"?>
<com.xiaopeng.xui.widget.XRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center_horizontal" android:id="@+id/root_layout" android:background="@drawable/x_bg_dialog" android:layout_width="900dp" android:layout_height="872dp">
    <com.xiaopeng.xui.widget.XTextView android:textSize="36sp" android:textColor="@color/x_theme_text_01" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="72dp" android:layout_marginTop="23dp" android:text="@string/xmly_vip_buying_dialog_title" android:layout_centerHorizontal="true"/>
    <RelativeLayout android:id="@+id/rl_info_layout" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="160dp">
        <com.xiaopeng.xui.widget.XTextView android:textSize="@dimen/x_font_body_01_size" android:textColor="@color/x_theme_text_01" android:id="@+id/text1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/xmly_vip_buying_dialog_tips_1" android:layout_centerHorizontal="true"/>
        <com.xiaopeng.xui.widget.XImageView android:id="@+id/iv_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:src="@drawable/img_xmly_vip_buying" android:layout_below="@+id/text1" android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <com.xiaopeng.xui.widget.XTextView android:textSize="22sp" android:textColor="@color/x_theme_text_02" android:id="@+id/text3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="95dp" android:text="@string/xmly_vip_buying_dialog_tips_2" android:layout_below="@+id/rl_info_layout" android:layout_centerHorizontal="true"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_below="@+id/text3" android:layout_centerHorizontal="true">
        <com.xiaopeng.xui.widget.XTextView android:textSize="20sp" android:textColor="@color/x_theme_text_03" android:id="@+id/text4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/xmly_vip_buying_dialog_tips_4" android:layout_centerHorizontal="true"/>
        <com.xiaopeng.xui.widget.XTextView android:textSize="20sp" android:textColor="@color/color_forward_normal" android:id="@+id/tv_vip_contact" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true"/>
    </LinearLayout>
    <com.xiaopeng.xui.widget.XImageButton android:id="@+id/btn_close" android:layout_marginLeft="23dp" android:layout_marginTop="23dp" app:vuiAction="Click" app:vuiEnableViewVuiMode="true" app:vuiLabel="@string/vui_label_close_dialog" style="@style/XButton.Icon.Large.Close"/>
</com.xiaopeng.xui.widget.XRelativeLayout>
